--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive"
+    "test": "mocha --compilers js:babel-core/register --recursive",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GMatias93/voting-server.git"
+  },
+  "babel": {
+    "preset": [
+      "es2015"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -22,6 +28,10 @@
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
+    "chai-immutable": "^1.5.3",
     "mocha": "^2.3.4"
+  },
+  "dependencies": {
+    "immutable": "^3.7.6"
   }
 }
