--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   "homepage": "https://github.com/GMatias93/voting-server#readme",
   "devDependencies": {
     "babel-cli": "^6.4.0",
-    "babel-core": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "mocha": "^2.3.4"
   },
   "dependencies": {
+    "babel-core": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "express": "^4.13.4",
     "immutable": "^3.7.6",
     "redux": "^3.0.5",
     "socket.io": "^1.4.4"
